freshed-rs-macros/tests/ui/fail/html_in_missing_markup.rs
use freshed_rs_macros::html_ctx;

fn main() {
    let ctx = 5;
    let _ = html_ctx!(ctx,);
}
